--- a/rumqttc/Cargo.toml
+++ b/rumqttc/Cargo.toml
@@ -47,6 +47,7 @@ url = { version = "2", default-features = false, optional = true }
 async-http-proxy = { version = "1.2.5", features = ["runtime-tokio", "basic-auth"], optional = true }
 
 [dev-dependencies]
+bincode = "1.3.3"
 color-backtrace = "0.4"
 matches = "0.1"
 pretty_assertions = "1"
