--- a/rumqttd/Cargo.toml
+++ b/rumqttd/Cargo.toml
@@ -14,7 +14,7 @@ tokio = { version = "1.0", features = ["rt", "time", "net", "io-util", "macros"]
 serde = { version = "1.0.125", features = ["derive"] }
 serde_json = "1.0.66"
 bytes = { version = "1", features = ["serde"] }
-flume = "0.10.9"
+flume = { version = "0.10.9", default-features = false, features = ["async"]}
 slab = "0.4.3"
 thiserror = "1.0.24"
 tokio-util = { version = "0.7", features = ["codec"], optional = true }
